[gd_scene load_steps=4 format=3 uid="uid://by3s0vy03jhgm"]

[ext_resource type="Script" path="res://scripts/blocks/LogicBlock.gd" id="1_8ru5c"]
[ext_resource type="Texture2D" uid="uid://bp6ihch4qfy34" path="res://textures/blocks/logic_block_and.png" id="2_u5gf6"]
[ext_resource type="Texture2D" uid="uid://d2knl2pc7ytxv" path="res://textures/blocks/misc/logic_pin_bool.png" id="3_f6qfd"]

[node name="LogicBlock" type="StaticBody2D"]
use_parent_material = true
script = ExtResource("1_8ru5c")

[node name="Sprite2D" type="Sprite2D" parent="."]
light_mask = 2
use_parent_material = true
texture = ExtResource("2_u5gf6")
region_rect = Rect2(0, 16, 8, 8)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-2, -2)
scale = Vector2(0.2, 0.2)
rect = Rect2(-10, -10, 40, 40)

[node name="shade" type="Node2D" parent="."]
modulate = Color(1, 1, 1, 0.521569)

[node name="Inputs" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="I1" type="TextureButton" parent="Inputs"]
offset_left = -6.0
offset_top = -2.0
offset_right = -2.0
offset_bottom = 2.0
texture_normal = ExtResource("3_f6qfd")

[node name="Outputs" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="O1" type="TextureButton" parent="Outputs"]
offset_left = 1.0
offset_top = -2.0
offset_right = 5.0
offset_bottom = 2.0
texture_normal = ExtResource("3_f6qfd")

[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
